--- a/src/components/shared/styles.scss
+++ b/src/components/shared/styles.scss
@@ -34,45 +34,104 @@ body {
     }
 }
 
+footer {
+    position: relative;
+    .kang {
+        background-color: #0F3852;
+        color: #ffffff;
+        padding-top: 15px;
+    }
+    .panel-heading {
+        background-color: #0F3852;
+        margin-bottom: -3px;
+        font-size: 26px;
+        color: #ffffff;
+        text-decoration: none solid white;
+        text-align: center;
+        margin-top: 10px;
+    }
+    .post-container {
+        overflow: auto;
+        padding-bottom: 25px;
+    }
+    .post-thumb {
+        float: left;
+    }
+    .post-content {
+        padding-left: 80px;
+    }
+    .mainquicklinks {
+        background-color: #F7F7F7;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        .btmmainquicklinks {
+            padding-bottom: 10px;
+            img {
+                margin-right: 8px;
+            }
+        }
+    }
+}
+
+.center {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+h2,
+.h2 {
+    font-size: 26px;
+}
+
+h1,
+.h1 {
+    font-size: 56px;
+    margin-bottom: 40px;
+    line-height: 61px;
+}
+
+.btn {
+    opacity: 1;
+    color: #ffffff;
+    background-color: #0073a8;
+    background-image: none;
+    background-position: center center;
+    background-repeat: repeat;
+    background-size: cover;
+    border-radius: 32px;
+    border-width: 1px;
+    border-color: #0073a8;
+    border-style: solid;
+    height: 36px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    line-height: 1.42857143;
+    font-size: 14px;
+}
+
 .banner_image {
     width: 100%;
-}
-
-.card_container {
-    padding: 20px;
-}
-
-.card {
-    width: 48%;
-    display: inline-block !important;
-    margin: 5px 0px;
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, .125);
-    border-radius: .25rem;
-}
-
-.card p {
-    padding: 0px;
-    margin: 0px
-}
-
-.card-body {
-    text-align: center;
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1.25rem;
-}
-
-.card_image {
-    width: 80px;
 }
 
 .con_image {
