--- a/src/components/shared/styles.scss
+++ b/src/components/shared/styles.scss
@@ -1,10 +1,10 @@
 body {
     background-color: #8080801f !important;
     color: #0073a8;
-    font-size: 14px;
+    font-size: 16px;
     a {
         color: #0073a8;
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -111,6 +111,22 @@ h1,
     line-height: 61px;
 }
 
+h4,
+.h4 {
+    font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+img {
+    vertical-align: middle;
+}
+
+.mt-top-zero {
+    margin-top: 0px;
+    padding-top: 0px;
+}
+
 .btn {
     opacity: 1;
     color: #ffffff;
@@ -127,7 +143,7 @@ h1,
     letter-spacing: 1px;
     text-transform: uppercase;
     line-height: 1.42857143;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .banner_image {
@@ -138,73 +154,18 @@ h1,
     width: 100%;
 }
 
-.quick_link_details {
-    display: inline-block;
-    width: 31%;
-    background-color: #fff;
-    margin: 10px;
-    color: rgb(0, 47, 255);
-    font-weight: bold;
-}
-
-.link_image {
-    height: 20px;
-}
-
-.dropbtn {
-    background-color: #fff;
-    color: rgb(0, 47, 255);
-    padding: 13px;
+.breadcrumb {
+    /*background-color: #8080801f !important;*/
+    padding-top: 15px;
+    padding-bottom: 40px;
     font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    min-width: 160px;
-    text-align: left;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #fff;
-}
-
-.nav_bar_header {
-    display: inline-block;
-    float: right;
-    right: 10px;
-}
-
-.search_ele {
-    width: 40%;
-    top: -10px;
-    position: relative;
-    border-radius: 3px;
-    box-shadow: none;
-    border-style: none;
-    padding: 5px;
+    a {
+        font-size: 16px;
+    }
+    .breadcrumb-item+.breadcrumb-item::before {
+        content: ">" !important;
+        padding-right: 15px !important;
+        padding-left: 15px !important;
+        font-size: 16px;
+    }
 }
