benefits internal pages

--- a/src/components/pages/benefits-navigator/benefits-navigator.css
+++ b/src/components/pages/benefits-navigator/benefits-navigator.css
@@ -38,6 +38,10 @@
     height: auto !important;
 }
 
+.heightpreferred {
+    height: 260px !important;
+}
+
 .card:hover {
     background-color: #b9ddb4;
 }
