--- a/src/components/shared/styles.scss
+++ b/src/components/shared/styles.scss
@@ -6,6 +6,12 @@ body {
         color: #0073a8;
         font-size: 16px;
     }
+    .blackfont {
+        color: #000000;
+    }
+    .smallfontsize {
+        font-size: 12px;
+    }
 }
 
 .container-fluid {
