--- a/src/components/pages/benefits-navigator/benefits-navigator.css
+++ b/src/components/pages/benefits-navigator/benefits-navigator.css
@@ -19,6 +19,24 @@
     padding: 20px;
 }
 
+.show {
+    display: block !important;
+}
+
+.modal-backdrop {
+    display: none;
+}
+
+.modalBackground {
+    position: fixed;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    opacity: 0.3;
+    display: none;
+}
+
 .backBtn {
     position: fixed;
     right: 15%;
